--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -35,13 +35,12 @@
     "nltk.download('punkt')\n",
     "\n",
     "# Sample text with emojis, punctuation, negation, and special characters\n",
-    "text = \"\"\"AI-driven drones 🚀🚀 are transforming industries! They don't just fly; they analyze, predict, and automate tasks effortlessly. \n",
-    "Military applications, disaster management, and logistics—AI drones are revolutionizing everything. But... are we ready? 🤔🤔\"\"\""
+    "text = \"\"\"John's dog doesn't like playing outside; however, it enjoys running—especially in the morning! Also, $50 isn't too much for a toy, right?\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,23 +144,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# k. Includes the words with apostrophe\n",
+    "whitespace_tokens = text.split()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word Tokenization: ['AI-driven', 'drones', '🚀🚀', 'are', 'transforming', 'industries', '!', 'They', 'do', \"n't\", 'just', 'fly', ';', 'they', 'analyze', ',', 'predict', ',', 'and', 'automate', 'tasks', 'effortlessly', '.', 'Military', 'applications', ',', 'disaster', 'management', ',', 'and', 'logistics—AI', 'drones', 'are', 'revolutionizing', 'everything', '.', 'But', '...', 'are', 'we', 'ready', '?', '🤔🤔']\n",
-      "Sentence Tokenization: ['AI-driven drones 🚀🚀 are transforming industries!', \"They don't just fly; they analyze, predict, and automate tasks effortlessly.\", 'Military applications, disaster management, and logistics—AI drones are revolutionizing everything.', 'But... are we ready?', '🤔🤔']\n",
-      "Punctuation-based Tokenizer: ['AI', '-', 'driven', 'drones', '🚀', '🚀', 'are', 'transforming', 'industries', '!', 'They', 'don', \"'\", 't', 'just', 'fly', ';', 'they', 'analyze', ',', 'predict', ',', 'and', 'automate', 'tasks', 'effortlessly', '.', 'Military', 'applications', ',', 'disaster', 'management', ',', 'and', 'logistics', '—', 'AI', 'drones', 'are', 'revolutionizing', 'everything', '.', 'But', '.', '.', '.', 'are', 'we', 'ready', '?', '🤔', '🤔']\n",
-      "Treebank Word Tokenizer: ['AI-driven', 'drones', '🚀🚀', 'are', 'transforming', 'industries', '!', 'They', 'do', \"n't\", 'just', 'fly', ';', 'they', 'analyze', ',', 'predict', ',', 'and', 'automate', 'tasks', 'effortlessly.', 'Military', 'applications', ',', 'disaster', 'management', ',', 'and', 'logistics—AI', 'drones', 'are', 'revolutionizing', 'everything.', 'But', '...', 'are', 'we', 'ready', '?', '🤔🤔']\n",
-      "Tweet Tokenizer: ['AI-driven', 'drones', '🚀', '🚀', 'are', 'transforming', 'industries', '!', 'They', \"don't\", 'just', 'fly', ';', 'they', 'analyze', ',', 'predict', ',', 'and', 'automate', 'tasks', 'effortlessly', '.', 'Military', 'applications', ',', 'disaster', 'management', ',', 'and', 'logistics', '—', 'AI', 'drones', 'are', 'revolutionizing', 'everything', '.', 'But', '...', 'are', 'we', 'ready', '?', '🤔', '🤔']\n",
-      "Multi-Word Expression Tokenizer: ['AI-driven', 'drones', '🚀🚀', 'are', 'transforming', 'industries', '!', 'They', 'do', \"n't\", 'just', 'fly', ';', 'they', 'analyze', ',', 'predict', ',', 'and', 'automate', 'tasks', 'effortlessly', '.', 'Military', 'applications', ',', 'disaster_management', ',', 'and', 'logistics—AI', 'drones', 'are', 'revolutionizing', 'everything', '.', 'But', '...', 'are', 'we', 'ready', '?', '🤔🤔']\n",
-      "TextBlob Tokenizer: ['AI-driven', 'drones', '🚀🚀', 'are', 'transforming', 'industries', 'They', 'do', \"n't\", 'just', 'fly', 'they', 'analyze', 'predict', 'and', 'automate', 'tasks', 'effortlessly', 'Military', 'applications', 'disaster', 'management', 'and', 'logistics—AI', 'drones', 'are', 'revolutionizing', 'everything', 'But', 'are', 'we', 'ready', '🤔🤔']\n",
-      "spaCy Tokenizer: ['AI', '-', 'driven', 'drones', '🚀', '🚀', 'are', 'transforming', 'industries', '!', 'They', 'do', \"n't\", 'just', 'fly', ';', 'they', 'analyze', ',', 'predict', ',', 'and', 'automate', 'tasks', 'effortlessly', '.', '\\n', 'Military', 'applications', ',', 'disaster', 'management', ',', 'and', 'logistics', '—', 'AI', 'drones', 'are', 'revolutionizing', 'everything', '.', 'But', '...', 'are', 'we', 'ready', '?', '🤔', '🤔']\n",
-      "Gensim Tokenizer: ['ai', 'driven', 'drones', 'are', 'transforming', 'industries', 'they', 'don', 't', 'just', 'fly', 'they', 'analyze', 'predict', 'and', 'automate', 'tasks', 'effortlessly', 'military', 'applications', 'disaster', 'management', 'and', 'logistics', 'ai', 'drones', 'are', 'revolutionizing', 'everything', 'but', 'are', 'we', 'ready']\n",
-      "Keras Tokenizer: ['ai', 'driven', 'drones', '🚀🚀', 'are', 'transforming', 'industries', 'they', \"don't\", 'just', 'fly', 'they', 'analyze', 'predict', 'and', 'automate', 'tasks', 'effortlessly', 'military', 'applications', 'disaster', 'management', 'and', 'logistics—ai', 'drones', 'are', 'revolutionizing', 'everything', 'but', 'are', 'we', 'ready', '🤔🤔']\n"
+      "Word Tokenization: [\"John's\", 'dog', \"doesn't\", 'like', 'playing', 'outside;', 'however,', 'it', 'enjoys', 'running—especially', 'in', 'the', 'morning!', 'Also,', '$50', \"isn't\", 'too', 'much', 'for', 'a', 'toy,', 'right?']\n",
+      "Sentence Tokenization: [\"John's dog doesn't like playing outside; however, it enjoys running—especially in the morning!\", \"Also, $50 isn't too much for a toy, right?\"]\n",
+      "Punctuation-based Tokenizer: ['John', \"'\", 's', 'dog', 'doesn', \"'\", 't', 'like', 'playing', 'outside', ';', 'however', ',', 'it', 'enjoys', 'running', '—', 'especially', 'in', 'the', 'morning', '!', 'Also', ',', '$', '50', 'isn', \"'\", 't', 'too', 'much', 'for', 'a', 'toy', ',', 'right', '?']\n",
+      "Treebank Word Tokenizer: ['John', \"'s\", 'dog', 'does', \"n't\", 'like', 'playing', 'outside', ';', 'however', ',', 'it', 'enjoys', 'running—especially', 'in', 'the', 'morning', '!', 'Also', ',', '$', '50', 'is', \"n't\", 'too', 'much', 'for', 'a', 'toy', ',', 'right', '?']\n",
+      "Tweet Tokenizer: [\"John's\", 'dog', \"doesn't\", 'like', 'playing', 'outside', ';', 'however', ',', 'it', 'enjoys', 'running', '—', 'especially', 'in', 'the', 'morning', '!', 'Also', ',', '$', '50', \"isn't\", 'too', 'much', 'for', 'a', 'toy', ',', 'right', '?']\n",
+      "Multi-Word Expression Tokenizer: ['John', \"'s\", 'dog', 'does', \"n't\", 'like', 'playing', 'outside', ';', 'however', ',', 'it', 'enjoys', 'running—especially', 'in', 'the', 'morning', '!', 'Also', ',', '$', '50', 'is', \"n't\", 'too', 'much', 'for', 'a', 'toy', ',', 'right', '?']\n",
+      "TextBlob Tokenizer: ['John', \"'s\", 'dog', 'does', \"n't\", 'like', 'playing', 'outside', 'however', 'it', 'enjoys', 'running—especially', 'in', 'the', 'morning', 'Also', '50', 'is', \"n't\", 'too', 'much', 'for', 'a', 'toy', 'right']\n",
+      "spaCy Tokenizer: ['John', \"'s\", 'dog', 'does', \"n't\", 'like', 'playing', 'outside', ';', 'however', ',', 'it', 'enjoys', 'running', '—', 'especially', 'in', 'the', 'morning', '!', 'Also', ',', '$', '50', 'is', \"n't\", 'too', 'much', 'for', 'a', 'toy', ',', 'right', '?']\n",
+      "Gensim Tokenizer: ['john', 's', 'dog', 'doesn', 't', 'like', 'playing', 'outside', 'however', 'it', 'enjoys', 'running', 'especially', 'in', 'the', 'morning', 'also', 'isn', 't', 'too', 'much', 'for', 'a', 'toy', 'right']\n",
+      "Keras Tokenizer: [\"john's\", 'dog', \"doesn't\", 'like', 'playing', 'outside', 'however', 'it', 'enjoys', 'running—especially', 'in', 'the', 'morning', 'also', '50', \"isn't\", 'too', 'much', 'for', 'a', 'toy', 'right']\n",
+      "Whitespace Tokenizer: [\"John's\", 'dog', \"doesn't\", 'like', 'playing', 'outside;', 'however,', 'it', 'enjoys', 'running—especially', 'in', 'the', 'morning!', 'Also,', '$50', \"isn't\", 'too', 'much', 'for', 'a', 'toy,', 'right?']\n"
      ]
     }
    ],
@@ -176,7 +186,8 @@
     "print(\"TextBlob Tokenizer:\", list(textblob_tokens))\n",
     "print(\"spaCy Tokenizer:\", spacy_tokens)\n",
     "print(\"Gensim Tokenizer:\", gensim_tokens)\n",
-    "print(\"Keras Tokenizer:\", keras_tokens)"
+    "print(\"Keras Tokenizer:\", keras_tokens)\n",
+    "print(\"Whitespace Tokenizer:\", whitespace_tokens)"
    ]
   },
   {
