--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,16 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\Joel\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
+      "[nltk_data] Error loading punkt: <urlopen error [Errno 11001]\n",
+      "[nltk_data]     getaddrinfo failed>\n"
      ]
     }
    ],
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,14 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word Tokenization: [\"John's\", 'dog', \"doesn't\", 'like', 'playing', 'outside;', 'however,', 'it', 'enjoys', 'running—especially', 'in', 'the', 'morning!', 'Also,', '$50', \"isn't\", 'too', 'much', 'for', 'a', 'toy,', 'right?']\n",
+      "Word Tokenization: ['John', \"'s\", 'dog', 'does', \"n't\", 'like', 'playing', 'outside', ';', 'however', ',', 'it', 'enjoys', 'running—especially', 'in', 'the', 'morning', '!', 'Also', ',', '$', '50', 'is', \"n't\", 'too', 'much', 'for', 'a', 'toy', ',', 'right', '?']\n",
       "Sentence Tokenization: [\"John's dog doesn't like playing outside; however, it enjoys running—especially in the morning!\", \"Also, $50 isn't too much for a toy, right?\"]\n",
       "Punctuation-based Tokenizer: ['John', \"'\", 's', 'dog', 'doesn', \"'\", 't', 'like', 'playing', 'outside', ';', 'however', ',', 'it', 'enjoys', 'running', '—', 'especially', 'in', 'the', 'morning', '!', 'Also', ',', '$', '50', 'isn', \"'\", 't', 'too', 'much', 'for', 'a', 'toy', ',', 'right', '?']\n",
       "Treebank Word Tokenizer: ['John', \"'s\", 'dog', 'does', \"n't\", 'like', 'playing', 'outside', ';', 'however', ',', 'it', 'enjoys', 'running—especially', 'in', 'the', 'morning', '!', 'Also', ',', '$', '50', 'is', \"n't\", 'too', 'much', 'for', 'a', 'toy', ',', 'right', '?']\n",
