--- a/lab6.ipynb
+++ b/lab6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,9 @@
      "output_type": "stream",
      "text": [
       "Formula 1 & Car Chatbot! Type 'exit' to stop.\n",
-      "Question asked: hi\n",
+      "Question asked: Best biryani in the world?\n",
+      "Bot: Hello! How can I assist you with Formula 1 or car-related queries today?\n",
+      "Question asked: Best biryani in the world?\n",
       "Bot: Hello! How can I assist you with Formula 1 or car-related queries today?\n",
       "Question asked: exit\n",
       "Goodbye!\n"
@@ -125,6 +127,13 @@
     "if __name__ == \"__main__\":\n",
     "    chat()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
