--- a/test.ipynb
+++ b/test.ipynb
@@ -2,126 +2,96 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: nltk in c:\\users\\joel\\anaconda3\\lib\\site-packages (3.8.1)\n",
-      "Requirement already satisfied: click in c:\\users\\joel\\anaconda3\\lib\\site-packages (from nltk) (8.1.7)\n",
-      "Requirement already satisfied: joblib in c:\\users\\joel\\anaconda3\\lib\\site-packages (from nltk) (1.2.0)\n",
-      "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\joel\\anaconda3\\lib\\site-packages (from nltk) (2023.10.3)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\joel\\anaconda3\\lib\\site-packages (from nltk) (4.65.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\joel\\anaconda3\\lib\\site-packages (from click->nltk) (0.4.6)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install nltk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\Joel\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
-     ]
-    }
-   ],
-   "source": [
-    "import nltk\n",
-    "nltk.download('wordnet')\n",
-    "from nltk.corpus import wordnet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Synset('bear.n.01'), Synset('bear.n.02'), Synset('bear.v.01'), Synset('give_birth.v.01'), Synset('digest.v.03'), Synset('bear.v.04'), Synset('bear.v.05'), Synset('bear.v.06'), Synset('hold.v.11'), Synset('yield.v.10'), Synset('wear.v.02'), Synset('behave.v.02'), Synset('bear.v.11'), Synset('hold.v.14'), Synset('have_a_bun_in_the_oven.v.01')]\n"
-     ]
-    }
-   ],
-   "source": [
-    "syns=wordnet.synsets('Bear')\n",
-    "print(syns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Synset('set.n.01'), Synset('set.n.02'), Synset('set.n.03'), Synset('stage_set.n.01'), Synset('set.n.05'), Synset('bent.n.01'), Synset('set.n.07'), Synset('set.n.08'), Synset('hardening.n.02'), Synset('set.n.10'), Synset('set.n.11'), Synset('set.n.12'), Synset('set.n.13'), Synset('put.v.01'), Synset('determine.v.03'), Synset('specify.v.02'), Synset('set.v.04'), Synset('set.v.05'), Synset('set.v.06'), Synset('fix.v.12'), Synset('set.v.08'), Synset('set.v.09'), Synset('set.v.10'), Synset('arrange.v.06'), Synset('plant.v.01'), Synset('set.v.13'), Synset('jell.v.01'), Synset('typeset.v.01'), Synset('set.v.16'), Synset('set.v.17'), Synset('set.v.18'), Synset('sic.v.01'), Synset('place.v.11'), Synset('rig.v.04'), Synset('set_up.v.04'), Synset('adjust.v.01'), Synset('fructify.v.03'), Synset('dress.v.16'), Synset('fit.s.02'), Synset('fixed.s.02'), Synset('located.s.01'), Synset('laid.s.01'), Synset('set.s.05'), Synset('determined.s.04'), Synset('hardened.s.05')]\n"
-     ]
-    }
-   ],
-   "source": [
-    "syns=wordnet.synsets('set')\n",
-    "print(syns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sat Feb  1 09:42:28 2025       \n",
-      "+-----------------------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 566.36                 Driver Version: 566.36         CUDA Version: 12.7     |\n",
-      "|-----------------------------------------+------------------------+----------------------+\n",
-      "| GPU  Name                  Driver-Model | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
-      "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
-      "|                                         |                        |               MIG M. |\n",
-      "|=========================================+========================+======================|\n",
-      "|   0  NVIDIA GeForce RTX 3050 ...  WDDM  |   00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   36C    P8              3W /   30W |       0MiB /   4096MiB |      0%      Default |\n",
-      "|                                         |                        |                  N/A |\n",
-      "+-----------------------------------------+------------------------+----------------------+\n",
-      "                                                                                         \n",
-      "+-----------------------------------------------------------------------------------------+\n",
-      "| Processes:                                                                              |\n",
-      "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
-      "|        ID   ID                                                               Usage      |\n",
-      "|=========================================================================================|\n",
-      "|    0   N/A  N/A     32692    C+G   ...Brave-Browser\\Application\\brave.exe      N/A      |\n",
-      "+-----------------------------------------------------------------------------------------+\n"
-     ]
-    }
-   ],
-   "source": [
-    "!nvidia-smi"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import re\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Embedding, SimpleRNN, LSTM, Dense, Dropout, SpatialDropout1D\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "# Load dataset\n",
+    "data = pd.read_csv(\"train.csv\")  # Ensure correct path\n",
+    "\n",
+    "def clean_text(text):\n",
+    "    if isinstance(text, float):\n",
+    "        return \"\"  # Handle NaN values\n",
+    "    text = text.lower()\n",
+    "    text = re.sub(r'http\\S+|www.\\S+', '', text)  # Remove URLs\n",
+    "    text = re.sub(r'[^a-zA-Z ]', '', text)  # Remove non-alphabetic characters\n",
+    "    return text\n",
+    "\n",
+    "data['cleaned_text'] = data['text'].apply(clean_text)\n",
+    "\n",
+    "# Encode Sentiments\n",
+    "data['sentiment'] = data['sentiment'].map({'positive': 2, 'neutral': 1, 'negative': 0})\n",
+    "\n",
+    "# Splitting Data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(data['cleaned_text'], data['sentiment'], test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Tokenization & Padding\n",
+    "tokenizer = Tokenizer(num_words=10000, oov_token=\"<OOV>\")\n",
+    "tokenizer.fit_on_texts(X_train)\n",
+    "X_train_seq = pad_sequences(tokenizer.texts_to_sequences(X_train), maxlen=100, padding='post')\n",
+    "X_test_seq = pad_sequences(tokenizer.texts_to_sequences(X_test), maxlen=100, padding='post')\n",
+    "\n",
+    "# Model 1: RNN Model\n",
+    "rnn_model = Sequential([\n",
+    "    Embedding(10000, 128, input_length=100),\n",
+    "    SimpleRNN(64, return_sequences=False),\n",
+    "    Dense(64, activation='relu'),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(3, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "rnn_model.compile(loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "\n",
+    "# Train RNN\n",
+    "rnn_history = rnn_model.fit(X_train_seq, y_train, validation_data=(X_test_seq, y_test), epochs=5, batch_size=32)\n",
+    "\n",
+    "# Model 2: LSTM Model\n",
+    "lstm_model = Sequential([\n",
+    "    Embedding(10000, 128, input_length=100),\n",
+    "    LSTM(64, return_sequences=False),\n",
+    "    Dense(64, activation='relu'),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(3, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "lstm_model.compile(loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "\n",
+    "# Train LSTM\n",
+    "lstm_history = lstm_model.fit(X_train_seq, y_train, validation_data=(X_test_seq, y_test), epochs=5, batch_size=32)\n",
+    "\n",
+    "# Evaluate Models\n",
+    "rnn_preds = np.argmax(rnn_model.predict(X_test_seq), axis=1)\n",
+    "lstm_preds = np.argmax(lstm_model.predict(X_test_seq), axis=1)\n",
+    "\n",
+    "print(\"RNN Model Performance:\")\n",
+    "print(classification_report(y_test, rnn_preds, target_names=['Negative', 'Neutral', 'Positive']))\n",
+    "\n",
+    "print(\"LSTM Model Performance:\")\n",
+    "print(classification_report(y_test, lstm_preds, target_names=['Negative', 'Neutral', 'Positive']))\n",
+    "\n",
+    "# Custom Prediction\n",
+    "def predict_sentiment(model, text):\n",
+    "    text_seq = pad_sequences(tokenizer.texts_to_sequences([clean_text(text)]), maxlen=100, padding='post')\n",
+    "    pred = np.argmax(model.predict(text_seq))\n",
+    "    sentiment_labels = {0: 'Negative', 1: 'Neutral', 2: 'Positive'}\n",
+    "    return sentiment_labels[pred]\n",
+    "\n",
+    "print(\"Text: 'I love this product!' -> Sentiment (RNN):\", predict_sentiment(rnn_model, \"I love this product!\"))\n",
+    "print(\"Text: 'I love this product!' -> Sentiment (LSTM):\", predict_sentiment(lstm_model, \"I love this product!\"))"
+   ]
   },
   {
    "cell_type": "code",
